# wgmplayer

./: .gitignore  Makefile.am  README  apps.gnome-mplayer.preferences.gschema.xml  autogen.sh  configure.ac  g-mplayer.desktop  gee-mplayer.1  gee-mplayer.desktop  gnome-mplayer.desktop  gnome-mplayer.schemas  gnome-mplayer.spec.in  gtkcompat.h  zrelease
data/: Makefile.am  g-mplayer.1  wgmplayer.1  wgmplayer.desktop
gmtk/: Makefile.am  gm_audio.c  gm_common.h  gm_file.c  gm_pref_store.c  gm_strfuncs.c  gm_strfuncs.h  gmtk_audio_meter.c  gmtk_audio_meter.h  gmtk_common.c  gmtk_media_player.c  gmtk_media_player.h  gmtk_media_tracker.c  libgmlib.la  libgmtk.la
icons/: Makefile.am
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
pixmaps/: g_mplayer.xpm  gee_mplayer.xpm
po/: Makefile.in  POTFILES.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fo.po  fr.po  fy.po  g-mplayer.dist.pot  g-mplayer.pot  gee-mplayer.dist.pot  gl.po  gnome-mplayer.pot  he.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sr.po  sr@latin.po  (+11 more)
src/: Makefile.am  common.h  gtkcompat.c  gtkcompat.h  gui-menu.c  gui.c  gui.h  langlist.h  main.c  playlist.c  support.c  support.h
src/gmtk/: gm_audio.c  gm_audio.h  gm_common.c  gm_log.c  gm_log.h  gm_parse.c  gm_pref_store.c  gm_pref_store.h  gm_strfuncs.c  gm_strfuncs.h  gmlib.h  gmtk.h  gmtk_audio_meter.c  gmtk_common.c  gmtk_common.h  gmtk_media_player.c  gmtk_media_player.h  gmtk_media_tracker.c  gmtk_media_tracker.h  gmtk_output_combo_box.c  gmtk_output_combo_box.h
wgtk/: gtkcompat.c  gtkcompat.h  w_gtk.c  w_gtk.h  w_gtk_menu.c  w_gtk_menu.h
