
g_mplayerdocdir = ${docdir}
g_mplayerdoc_DATA = ../README ../COPYING

desktopdir = ${prefix}/share/applications
desktop_DATA = g-mplayer.desktop

manpagedir = ${mandir}/man1
manpage_DATA = g-mplayer.1

# ICONS
icon1dir = $(datadir)/icons/hicolor/16x16/apps
icon1_DATA = icons/16x16/g-mplayer.png

icon2dir = $(datadir)/icons/hicolor/22x22/apps
icon2_DATA = icons/22x22/g-mplayer.png

icon3dir = $(datadir)/icons/hicolor/24x24/apps
icon3_DATA = icons/24x24/g-mplayer.png

icon4dir = $(datadir)/icons/hicolor/32x32/apps
icon4_DATA = icons/32x32/g-mplayer.png

icon5dir = $(datadir)/icons/hicolor/48x48/apps
icon5_DATA = icons/48x48/g-mplayer.png

icon6dir = $(datadir)/icons/hicolor/scalable/apps
icon6_DATA = icons/scalable/g-mplayer.svg

icon7dir = $(datadir)/pixmaps/
icon7_DATA = icons/48x48/g-mplayer.png
