
icon1dir = $(datadir)/icons/hicolor/16x16/apps
icon1_DATA = 16x16/g-mplayer.png

icon2dir = $(datadir)/icons/hicolor/22x22/apps
icon2_DATA = 22x22/g-mplayer.png

icon3dir = $(datadir)/icons/hicolor/24x24/apps
icon3_DATA = 24x24/g-mplayer.png

icon4dir = $(datadir)/icons/hicolor/32x32/apps
icon4_DATA = 32x32/g-mplayer.png

icon5dir = $(datadir)/icons/hicolor/48x48/apps
icon5_DATA = 48x48/g-mplayer.png

icon6dir = $(datadir)/icons/hicolor/scalable/apps
icon6_DATA = scalable/g-mplayer.svg


